# yuangod_smart_car

./: CMakeLists.txt  README.md  TEST.md  sdkconfig  sdkconfig.defaults
chassis/: sdkconfig
chassis/components/bdc_motor_control/include/: bdc_motor_control.h
chassis/components/common/include/: task_period.h  task_priorities.h
chassis/components/softap_sta/: CMakeLists.txt  softap_sta.c
chassis/components/softap_sta/include/: campus_network.h
chassis/main/: app_main.c
chassis/main/user_battery/: user_battery.c
chassis/main/user_imu/: user_imu.h
chassis/main/user_motors/: user_motors.h
chassis/main/user_network/: user_network.c
chassis_esp32/: CMakeLists.txt  README.md  test.txt
chassis_esp32/components/active_buzzer/: CMakeLists.txt  active_buzzer.c
chassis_esp32/components/active_buzzer/include/: active_buzzer.h
chassis_esp32/components/bdc_motor_control/: CMakeLists.txt  bdc_motor_control.c
chassis_esp32/components/filter/: CMakeLists.txt  low_pass_filter.c
chassis_esp32/components/filter/include/: low_pass_filter.h
chassis_esp32/components/lwrb/: CMakeLists.txt
chassis_esp32/components/simple_frame/: CMakeLists.txt  README.md
chassis_esp32/components/simple_frame/src/: simple_frame.c
chassis_esp32/components/softap_sta/: CMakeLists.txt  Kconfig  campus_network.c  softap_sta.c
chassis_esp32/components/softap_sta/include/: softap_sta.h
chassis_esp32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
chassis_esp32/main/user_battery/: user_battery.h
chassis_esp32/main/user_buzzer/: user_buzzer.c  user_buzzer.h
chassis_esp32/main/user_motors/: user_motors.c  user_motors.h
chassis_esp32/main/user_network/: user_network.c
components/bdc_motor_control/: CMakeLists.txt  bdc_motor_control.c  bdc_motor_control.h
components/bdc_motor_control/include/: bdc_motor_control.h
components/campus_network/: CMakeLists.txt  Kconfig  campus_network.c
components/campus_network/include/: campus_network.h
components/common/: CMakeLists.txt
components/common/include/: task_period.h  task_priorities.h
components/mpu6050/: mpu6050.c
components/mpu6050/include/: mpu6050.h
components/softap_sta/: campus_network.c  softap_sta.c
components/softap_sta/include/: softap_sta.h
lidar_esp32/: CMakeLists.txt  README.md  sdkconfig.defaults
lidar_esp32/components/common/include/: task_period.h  task_priorities.h
lidar_esp32/components/ld14/: CMakeLists.txt  Kconfig  ld14.c
lidar_esp32/components/ld14/include/: ld14.h
lidar_esp32/components/socket_ros2/: CMakeLists.txt  Kconfig  socket_ros2.c
lidar_esp32/components/socket_ros2/include/: socket_ros2.h
lidar_esp32/components/uart_events/: CMakeLists.txt  Kconfig  uart_events.c
lidar_esp32/components/uart_events/include/: uart_events.h
lidar_esp32/components/wifi_station/: CMakeLists.txt  Kconfig  wifi_station.c
lidar_esp32/components/wifi_station/include/: wifi_station.h
lidar_esp32/main/: app_main.c
main/: CMakeLists.txt  app_main.c
main/user_battery/: user_battery.h
main/user_imu/: user_imu.c
main/user_motors/: user_motors.c  user_motors.h
main/user_mpu6050/: user_mpu6050,h  user_mpu6050.c
main/user_network/: user_network.c  user_network.h
ros2_jazzy/: README.md  close_tcp2vsp.sh  create_tcp2vsp.sh  yuangod_start.sh
ros2_jazzy/src/chassis_driver/: CMakeLists.txt  package.xml
ros2_jazzy/src/chassis_driver/config/: ekf.yaml
ros2_jazzy/src/chassis_driver/launch/: chassis_node_launch.py
ros2_jazzy/src/chassis_driver/src/: chassis_node.cpp
ros2_jazzy/src/lidar_driver/: CMakeLists.txt  package.xml
ros2_jazzy/src/lidar_driver/include/lidar_driver/: ldlidar_ls.h
ros2_jazzy/src/lidar_driver/launch/: lidar_driver_launch.py
ros2_jazzy/src/lidar_driver/src/: ldlidar_ls.cpp  lidar_node.cpp
ros2_jazzy/src/nav2_launch/: CMakeLists.txt  README.md  package.xml
ros2_jazzy/src/nav2_launch/launch/: navigation_launch.py
ros2_jazzy/src/nav2_launch/params/: nav2_params.yaml
ros2_jazzy/src/slam_launch/: CMakeLists.txt  package.xml
ros2_jazzy/src/slam_launch/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml  (+1 more)
ros2_jazzy/src/yuangod_description/: CMakeLists.txt  package.xml
项目说明/: TCP与ROS2功能包测试方法.md  chassis_esp32介绍.md
(+12 files in other folders)
