idf_component_register(SRCS "app_main.c" 
                            "./user_motors/user_motors.c"
                            "./user_imu/user_imu.c"
                            "./user_battery/user_battery.c"
                            "./user_network/user_network.c"
                    INCLUDE_DIRS ".")
